# advent-of-code

./: .gitignore  1a.py  day01.py  day02.py  day03.py  day05.py  day08.py  day10.py  day11.py  day13.py  day14.py  day15.py  day3.py  day4.py  day5a.py  day7.py  day9.py  dev.yml  pyproject.toml
2022/: day06.py  day12.py
2023/: day1.py  day2.py  day3.py
