[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Christopher Singer <christopher.singer.analytics@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.13"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
